src/css/profile/mobile/changeable/common/groupindex.less
.ui-listview .ui-group-index {
	box-sizing: border-box;
	min-height: 64 * @unit_base;
	padding: 12 * @unit_base 32 * @unit_base 12 * @unit_base 32 * @unit_base;
	border-top: 2 * @unit_base solid @color_groupindex_divider;

	font-size: 33 * @unit_base;
	color: @color_list_divider_text;
	line-height: 37 * @unit_base;
	vertical-align: middle;
	position: relative;

	input[type=checkbox] {
		position: absolute;
		right: 32 * @unit_base;
		bottom: 7 * @unit_base;
	}

	+ .ui-li-static {
		padding: 33 * @unit_base 17 * @unit_base 33 * @unit_base 32 * @unit_base;

	}
	~ .ui-li-static {
		> input[type=checkbox] {
			position: absolute;
			right: 32 * @unit_base;
			top: 35 * @unit_base;
		}
	}
}

